Add two input files for compiler debugging

--- a/adkv1/acl.tex
+++ b/adkv1/acl.tex
@@ -1,7 +1,13 @@
-\documentclass[]{article}
+\documentclass{article}
 \usepackage[subpreambles=true]{standalone} 
 \usepackage{import} 
+
 \begin{document}
-\section{Hello World}
+
+\section{One}
 \import{adl1/}{adr1}
+
+\section{Two}
+\import{adl1/}{adr2}
+
 \end{document}
