style: switch default dagger to arrow
For item lists

--- a/localtexmf/tex/latex/templates/bicolumn.tex
+++ b/localtexmf/tex/latex/templates/bicolumn.tex
@@ -4,7 +4,7 @@
 \pagestyle{fancy}
 \usepackage{enumitem}
 \usepackage[dvipsnames]{xcolor}
-\setlist[itemize]{label=$\dagger$}
+\setlist[itemize]{label=\ding{228}}
 \usepackage{dashrule}
 \usepackage{titlesec}
 \usepackage{fontspec}
