feat: add href package for linked footnotes

--- a/localtexmf/tex/latex/templates/core.tex
+++ b/localtexmf/tex/latex/templates/core.tex
@@ -1,6 +1,15 @@
 \documentclass{article}
 \usepackage{geometry}
 \usepackage{lipsum} % For dummy text, remove this in your actual document
+\usepackage{hyperref}
+\hypersetup{
+  colorlinks=true,
+  linkcolor=blue,
+  filecolor=magenta,      
+  urlcolor=cyan,
+  pdftitle={Overleaf Example},
+  pdfpagemode=FullScreen,
+}
 
 \geometry{
     a4paper,
@@ -91,5 +100,8 @@
         \vspace{0.1cm}
 }}
 
+% \footnotemark[1]
+% \footnotetext[1]{\url{https://github.com/KXzeno/adk}}
+% \href{url}{text}
 
 \end{document}
