docs: add behavior comments to sample tex

--- a/ADK/projects/sample/sample.tex
+++ b/ADK/projects/sample/sample.tex
@@ -6,22 +6,33 @@
 \begin{document}
 
 \frontmatter
-{Project|Feature|Restructure}
+% Type
+{Project|Feature|Restructure} 
+% Title
 {Title}
+% Status
 {OM|ON|D|X}
+% Context
 {\hfill OM $=$ Omitted \hfill ON $=$ Ongoing \hfill D $=$ Deprecated \hfill X $=$ Executed}
 
 \strategy
+% Core Decision
 {Salient point of change}
+% Prospects
 {You can insert anything here}
+% Decision Parameters
 {This includes tables, lists, and graphics}
+% Zero Technical Debt Concerns
 {With modularity, this row of pages is also optional}
 
 \deploy
+% Decision Process
 {I suggest at least using this row via {\textbackslash}deploy}
+% Results and Conflicts
 {Templates are still in the making}
 
 \report
+% Experience Report
 {This is entirely optional as well}
 
 \end{document}
