feat: add xcolor and item list packages

--- a/localtexmf/tex/latex/mystuff/preamble.sty
+++ b/localtexmf/tex/latex/mystuff/preamble.sty
@@ -13,6 +13,13 @@
   pdfpagemode=FullScreen,
 }
 
+\usepackage{enumitem}
+\usepackage[dvipsnames]{xcolor}
+
+\newcommand{\hlc}[2][yellow]{\unskip{\sethlcolor{#1}
+\hl{#2}}}
+
+
 \geometry{
     a4paper,
     total={170mm,257mm},
