feat(preamble): change list label sep to 0

--- a/localtexmf/tex/latex/mystuff/preamble.sty
+++ b/localtexmf/tex/latex/mystuff/preamble.sty
@@ -14,6 +14,9 @@
 }
 
 \usepackage{enumitem}
+\setlist[itemize]{leftmargin=*}
+\setlist[enumerate]{leftmargin=*}
+
 \usepackage[dvipsnames]{xcolor}
 
 \newcommand{\hlc}[2][yellow]{\unskip{\sethlcolor{#1}
