feat(template): add status code BL

--- a/ADK/projects/sample/sample.tex
+++ b/ADK/projects/sample/sample.tex
@@ -11,9 +11,9 @@
 % Title
 {Title}
 % Status
-{OM|ON|D|X}
+{OM|ON|D|X|BL}
 % Context
-{\hfill OM $=$ Omitted \hfill ON $=$ Ongoing \hfill D $=$ Deprecated \hfill X $=$ Executed}
+{\hfill OM $=$ Omitted \hfill ON $=$ Ongoing \hfill D $=$ Deprecated \hfill X $=$ Executed \hfill BL $=$ Backlogged}
 
 \strategy
 % Core Decision
