--- a/localtexmf/tex/latex/mystuff/adkore.sty
+++ b/localtexmf/tex/latex/mystuff/adkore.sty
@@ -16,6 +16,7 @@
             % ON = Ongoing
             % D = Deprecated
             % X = Executed
+            % BL = Backlogged
 
             \vspace{0.17cm}
             \textbf{Context}: #4
