chore: build new sample

--- a/ADK/projects/sample/sample.tex
+++ b/ADK/projects/sample/sample.tex
@@ -3,6 +3,9 @@
 \usepackage{preamble}
 \usepackage{adkore}
 
+% [ADK // Optional]{Project version encounter and version ending}
+\version[Optional]{Initial -- Final}
+
 \begin{document}
 
 \frontmatter
