chore: update and build sample

--- a/ADK/projects/sample/sample.tex
+++ b/ADK/projects/sample/sample.tex
@@ -36,6 +36,6 @@
 
 \report
 % Experience Report
-{This is entirely optional as well}
+{This is entirely optional as well\\Express change in decision using {\Delta}delta}
 
 \end{document}
