chore: rebuild sample tex file

--- a/ADK/projects/sample/sample.tex
+++ b/ADK/projects/sample/sample.tex
@@ -36,6 +36,11 @@
 
 \report
 % Experience Report
-{This is entirely optional as well\\Express change in decision using {\Delta}delta}
+{This is entirely optional as well. Express change in decision using {\Delta}delta}
+
+%%%%%%% Convenient to know %%%%%%%%
+% Font Size can be changed inline -- `{\fontsize{10}{12}\selectfont Text}` 
+% % Where first arg is font size, second is baselineskip. 
+% % % The general rule is 1.2 -- 1.3x font size
 
 \end{document}
