--- a/ADK/projects/sample/sample.tex
+++ b/ADK/projects/sample/sample.tex
@@ -38,9 +38,17 @@
 % Experience Report
 {This is entirely optional as well. Express change in decision using {\Delta}delta}
 
+\end{document}
+
 %%%%%%% Convenient to know %%%%%%%%
 % Font Size can be changed inline -- `{\fontsize{10}{12}\selectfont Text}` 
 % % Where first arg is font size, second is baselineskip. 
 % % % The general rule is 1.2 -- 1.3x font size
 
-\end{document}
+% Continue a broken enumeration
+% % \setcounter{enumi}{4}}}
+
+%%% Packages you can use %%% Make sure to check their respective documentation %%%
+% tabulararray
+% % May require array package
+
