--- a/ADK/projects/sample/sample.tex
+++ b/ADK/projects/sample/sample.tex
@@ -44,6 +44,8 @@
 % Font Size can be changed inline -- `{\fontsize{10}{12}\selectfont Text}` 
 % % Where first arg is font size, second is baselineskip. 
 % % % The general rule is 1.2 -- 1.3x font size
+% Use \raggedright for proper spacing in boxes
+% % It is justified by default
 
 % Continue a broken enumeration
 % % \setcounter{enumi}{4}}}
