Add tabularray package in preamble

--- a/localtexmf/tex/latex/mystuff/preamble.sty
+++ b/localtexmf/tex/latex/mystuff/preamble.sty
@@ -2,6 +2,8 @@
 
 \ProvidesPackage{preamble}
 
+\usepackage[english]{babel}
+\usepackage{tabularray}
 \usepackage{geometry}
 \usepackage{lipsum}
 \usepackage{hyperref}
@@ -59,3 +61,4 @@
     Extension = .ttc,
     BoldFont = Iosevka-Bold.ttc,
 ]
+
