--- a/localtexmf/tex/latex/templates/door.tex
+++ b/localtexmf/tex/latex/templates/door.tex
@@ -1,3 +1,7 @@
 % TODO
 %% Refer to https://lizengland.com/blog/2014/04/the-door-problem/
 
+\documentclass{article}
+\usepackage{preamble}
+\usepackage{adkore}
+
