fix: restructure load order
Font setting seems to need to be declared last for it to be in effect.

--- a/localtexmf/tex/latex/mystuff/preamble.sty
+++ b/localtexmf/tex/latex/mystuff/preamble.sty
@@ -54,6 +54,9 @@
 \cfoot{}
 \renewcommand{\headrulewidth}{0pt}
 
+\usepackage{txfonts} % Allows for math symbols
+\usepackage{ulsy} % Contradiction symbols
+
 \usepackage{fontspec}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -61,6 +64,5 @@
     Extension = .ttc,
     BoldFont = Iosevka-Bold.ttc,
     AutoFakeSlant,
+    SizeFeatures
 ]
-\usepackage{txfonts} % Allows for math symbols
-\usepackage{ulsy} % Contradiction symbols
