feat(typeset): automate proper quote enclosure
By default, LaTeX separates beginning quotes ('') and ending quotes (")

--- a/localtexmf/tex/latex/mystuff/preamble.sty
+++ b/localtexmf/tex/latex/mystuff/preamble.sty
@@ -57,6 +57,10 @@
 \usepackage{txfonts} % Allows for math symbols
 \usepackage{ulsy} % Contradiction symbols
 
+\usepackage [english]{babel}
+\usepackage [autostyle, english = american]{csquotes}
+\MakeOuterQuote{"}
+
 \usepackage{fontspec}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
