fix: add dependencies for hl cmd in preamble

--- a/localtexmf/tex/latex/mystuff/preamble.sty
+++ b/localtexmf/tex/latex/mystuff/preamble.sty
@@ -19,8 +19,9 @@
 \setlist[itemize]{leftmargin=*, noitemsep, topsep=0pt}
 \setlist[enumerate]{leftmargin=*, noitemsep, topsep=0pt}
 
+\usepackage{soul}
+\usepackage{color}
 \usepackage[dvipsnames]{xcolor}
-
 \newcommand{\hlc}[2][yellow]{\unskip{\sethlcolor{#1}
 \hl{#2}}}
 
