feat: add tikz pkg for diagram creation

--- a/localtexmf/tex/latex/mystuff/preamble.sty
+++ b/localtexmf/tex/latex/mystuff/preamble.sty
@@ -25,6 +25,10 @@
 \newcommand{\hlc}[2][yellow]{\unskip{\sethlcolor{#1}
 \hl{#2}}}
 
+\usepackage{tikz}
+\usetikzlibrary{positioning}
+\usetikzlibrary{shapes.geometric}
+\usetikzlibrary{arrows.meta}
 
 \geometry{
   a4paper,
