--- a/localtexmf/tex/latex/mystuff/preamble.sty
+++ b/localtexmf/tex/latex/mystuff/preamble.sty
@@ -29,6 +29,7 @@
 \usetikzlibrary{positioning}
 \usetikzlibrary{shapes.geometric}
 \usetikzlibrary{arrows.meta}
+\usepackage{fontawesome5}
 
 \geometry{
   a4paper,
